--- a/.cs50.yaml
+++ b/.cs50.yaml
@@ -1,6 +1,6 @@
 check50:
   checks:
     hello world:
-      - run: ./GetName
+      - run: python3 hello.py
         stdout: Hello, world!
         exit: 0
