--- a/.cs50.yaml
+++ b/.cs50.yaml
@@ -1,6 +1,5 @@
 check50:
   checks:
-    hello world:
-      - run: python3 hello.py
-        stdout: Hello, world!
+    GetName:
+      - run: ./GetName
         exit: 0
