--- a/.cs50.yaml
+++ b/.cs50.yaml
@@ -2,4 +2,6 @@ check50:
   checks:
     GetName:
       - run: ./GetName
-        exit: 0
+      stdin:
+        - baz # insert baz into stdin
+      exit: 0
