--- a/.cs50.yaml
+++ b/.cs50.yaml
@@ -1,6 +1,6 @@
 check50:
   checks:
-    foo:
-      - run: ./GetName # run python3 foo.py
-        stdin: Matt
+    check1:
+      - run: ./LC1a 
+        stdin: 12
         exit: 0 # expect program to exit with exitcode 0
